add route to get logging results
