# backend/go/model_timing_results.go
@@ -1,0 +1,17 @@
+/*
+ * Podcast Recommender app
+ *
+ * This is the API for the podcast recommender app. The API used to get all data is Listen Notes (https://www.listennotes.com/api/)
+ *
+ * API version: 1.0.0
+ * Contact: joren.sjongers@icloud.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type TimingResults struct {
+	// The date and time when these logging results were produced.
+	Datetime string `json:"datetime,omitempty"`
+	// The logging data
+	Results []TimingResultsResults `json:"results,omitempty"`
+}
